--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,14 @@
+@font-face {
+  font-family: 'Zilla Slab';
+  font-style: italic;
+  font-weight: 300;
+  font-display: swap;
+  src: url('https://fonts.gstatic.com/s/zillaslab/v6/dFanZfeM_74wlPZtksIFaj8CVHaZV3B3Taw.woff2') format('woff2');
+}
+
+body {
+background-image: url('/src/Fitnesstracker.png');
+}
 .App {
   text-align: center;
 }
@@ -7,6 +18,8 @@
   pointer-events: none;
 }
 
+
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
@@ -14,7 +27,7 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #3365c9;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -28,11 +41,33 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
+.navbar {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  min-height: 10vh;
+  background-color: rgb(27, 206, 206);
+  color: rgb(218, 137, 33);
+
+}
+
+h1,h2{
+  animation-name: wave;
+  font-family: 'Zilla Slab';
+  animation-iteration-count: infinite;
+  height: 100%;
+   width: 100%;
+  border-radius: 50%;
+  color: azure;
+  animation-direction: alternate;
+  animation-duration: 8s;
+  animation-timing-function: ease-out;}
+
+@keyframes wave {
   from {
     transform: rotate(0deg);
   }
   to {
-    transform: rotate(360deg);
+    transform: rotate(0deg);
   }
 }
