--- a/client/src/App.css
+++ b/client/src/App.css
@@ -44,7 +44,7 @@ body {
   }
 }
 
-.App-header {
+/* .App-header {
   background-color: #3365c9;
   min-height: 100vh;
   display: flex;
@@ -53,7 +53,7 @@ body {
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
-}
+} */
 
 .App-link {
   color: #61dafb;
@@ -62,21 +62,37 @@ body {
   color: azure;
  
 } */
+.App-Header {
+  display: flex;
+  background-color: rgb(56, 56, 177);
+background-image: linear-gradient(to right, rgb(65, 144, 247) , rgb(8, 7, 100));
+padding-bottom: 2%;
+margin-bottom: -3%;
+}
+
 
 .navbarElements {
-  display: flex;
+  display: none;
+  flex:1;
   justify-content: space-around;
   align-items: center;
 color:  #3365c9;
 font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-background-color: rgb(56, 56, 177);
-background-image: linear-gradient(to right, rgb(65, 144, 247) , rgb(8, 7, 100));
-padding-bottom: 2%;
-margin-bottom: -3%;
+/* background-color: rgb(56, 56, 177);
+background-image: linear-gradient(to right, rgb(65, 144, 247) , rgb(8, 7, 100)); */
+/* padding-bottom: 2%;
+margin-bottom: -3%; */
  /* position: sticky; */
   
 }
-
+@media (min-width: 600px) {
+  .Menu-Container{
+    display: none;
+  }
+  .navbarElements{
+    display: flex;
+  }
+}
 #Login {
   color: rgb(255, 255, 255);
 }
